fix: firefox popup visibility issue -> 1.0.1

--- a/src/popup/_common.scss
+++ b/src/popup/_common.scss
@@ -17,7 +17,7 @@ html {
 }
 
 body {
-    overflow-x: hidden;
+    //overflow-x: hidden;
     &.fixed-scroll {
         /* prevents scroll bar flicker when dragging a piece out */
         overflow-y: scroll;
@@ -26,7 +26,7 @@ body {
 
 a {
     @include themify() {
-        color: themed("link");
+        color: themed('link');
     }
 
     cursor: pointer;
@@ -51,3 +51,16 @@ td {
     vertical-align: middle;
     text-align: inherit;
 }
+
+// body ::-webkit-scrollbar, body ::-webkit-scrollbar-corner {
+//     width: .5rem;
+//     @include themify() {
+//         background: themed('scrollbar-bg');
+//     }
+// }
+
+// body ::-webkit-scrollbar-thumb {
+//     @include themify() {
+//         background: themed('scrollbar-thumb');
+//     }
+// }
