--- a/src/popup/_themes.scss
+++ b/src/popup/_themes.scss
@@ -13,6 +13,8 @@ $themes: (
         border-primary: #d9d9d9,
         border-secondary: #4d4d4d,
         accent: rgba(214, 79, 0, 0.7),
+        scrollbar-bg: #262421,
+        scrollbar-thumb: #4d4d4d,
     ),
     dark: (
         user-link: #999,
@@ -28,6 +30,8 @@ $themes: (
         border-primary: #4e4e4e,
         border-secondary: #919191,
         accent: rgba(214, 79, 0, 0.7),
+        scrollbar-bg: white,
+        scrollbar-thumb: #919191,
     ),
 );
 
