--- a/src/popup/popup.scss
+++ b/src/popup/popup.scss
@@ -7,8 +7,8 @@
 @import "footer";
 @import "switch";
 
-html {
-    min-width: 22em;
+body {
+    min-width: 25em;
 }
 
 main {
